mobileblurb overflow fix

--- a/src/components/MobilePage.css
+++ b/src/components/MobilePage.css
@@ -194,7 +194,6 @@ button:active .navbtnsvg .navbtns {
   width: 90vw;
   max-width: 412.5px;
   flex: 1;
-  overflow: scroll;
   display: flex;
   align-items: center;
   justify-content: center;
